minor styling fixes to look better on mobile

--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -29,3 +29,17 @@ input.button, .body-button{
     border:none;
     background-color: transparent;
 }
+
+@media (max-width: 500px) {
+    .session-details .body-button{
+        font-size: 21px;
+    }
+
+    .session-details > .row{
+        gap: 0;
+    }
+
+    .player-section .body-button{
+        font-size: 21px;
+    }
+}
