--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -125,7 +125,7 @@ input:focus + .checkmark{
     font-size: 14px;
 }
 
-.session-details > .row > .form > form > .submit{
+.session-details .submit{
     font-size: 16px;
     padding: 0;
 }
